<resources>
    <string name="app_name">Alexa Clone</string>
    <string name="dashboard">Dashboard</string>
    <string name="facebook_app_id">1462441203868455</string>

    <!-- Login settings -->
    <string name="sign_in">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in_register">Sign in / register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Home settings -->
    <string name="pref_header_home">Home</string>
    <string name="pref_category_assistant">Home assistant features</string>
    <string name="pref_title_time">Get the current time</string>
    <string name="pref_title_weather">Get weather conditions</string>
    <string name="pref_description_weather">Discover current weather conditions nearby</string>
    <string name="pref_category_automation">Home automation features</string>
    <string name="pref_title_lights">Toggle lights</string>
    <string name="pref_description_lights">Turn the lights on and off</string>
    <string name="pref_title_heating">Toggle heating</string>
    <string name="pref_description_heating">Turn the heating on and off</string>
    <string name="pref_category_interactive">Interactive services features</string>
    <string name="order_takeaway">Order take-away</string>
    <string name="order_shopping">Order shopping</string>
    <string name="order_taxi">Order taxi</string>

    <!-- Medical settings -->
    <string name="pref_header_medical">Medical</string>
    <string name="pref_title_memory">Play memory game</string>
    <string name="pref_description_memory">Play the game and hone your skills!</string>
    <string name="view_calendar">View calendar</string>
    <string name="browse_schedule_appointments">Browse and schedule your appointments</string>

    <!-- Location settings -->
    <string name="pref_header_location">Location</string>
    <string name="permissionPositive">Allow</string>
    <string name="permissionNegative">Deny</string>
    <string name="permissionLocationExplain">In order for the geo fence to work you need to accept the following permissions</string>
    <string name="permissionSMSExplain">In order to send sms to your emergency contacts when you exit the geo fence you need to accept the following permissions</string>

    <!-- Settings settings -->
    <string name="pref_header_settings">Settings</string>
    <string name="sign_out">Sign out</string>

    <!-- Unsorted -->
    <string name="connect_device">Connect Device</string>
    <string name="disconnect_device">Disconnect Device</string>
    <string name="started_scan">Started scan.</string>
    <string name="found_device">Found OneSheeld.</string>
    <string name="failed_find_device">Failed to find OneSheeld.</string>
    <string name="failed_connect_device">Failed to connect to OneSheeld.</string>
    <string name="no_call_permission">No call permission; dialing instead.</string>
    <string name="running_in_background">This app is still running in the background.</string>
    <string name="running_title">Alexa Clone Running</string>
    <string name="shopping">Shopping</string>
    <string name="bluetooth_not_supported">Your device does not support bluetooth, and cannot connect to the care device.</string>
    <string name="cant_buildings_location">Can\'t get buildings without your location permission.</string>
    <string name="connect_device_first">You need to connect to device first.</string>
    <string name="the_time_is">The time is %s.</string>
    <string name="places">Places</string>
    <string name="cant_find_location">We can\'t find your location.</string>
    <string name="network_error_occurred">A network error occurred. Do you have any internet?</string>
    <string name="failed_understand_response">Could not understand the website\'s response. Perhaps the site is down?</string>
    <string name="title_activity_contacts">ContactsActivity</string>

    <!-- Camera -->
    <string name="camera_sleep_interrupted">Error: Camera sleep interrupted.</string>
    <string name="device_has_no_camera">Error: Your device doesn\'t have a camera.</string>
    <string name="camera_unavailable">Error: The camera is unavailable.</string>
    <string name="failed_set_camera_display">Error: Failed to set display for camera.</string>
    <string name="camera_has_no_resolutions">Error: The camera doesn\'t support any resolution.</string>
    <string name="couldnt_open_camera">Error: Couldn\'t get camera instance. No permissions?</string>

    <!-- memory game -->
    <string-array name="type">
        <item>New Game</item>
        <item>4 X 4</item>
        <item>4 X 5</item>
        <item>5 X 5</item>
        <item>6 X 5</item>
        <item>7 X 5</item>
    </string-array>
</resources>
